@@ -486,11 +486,12 @@ class Universe(object):
             self.trajectory = MemoryReader(
                 coordinates,
                 dimensions=self.trajectory.ts.dimensions,
-                dt=self.trajectory.ts.dt)
+                dt=self.trajectory.ts.dt,
+                filename=self.filename)
 
     # python 2 doesn't allow an efficient splitting of kwargs in function
     # argument signatures.
-    # In python3-only we'd be able to explicitely define this function with
+    # In python3-only we'd be able to explicitly define this function with
     # something like (sel, *othersels, updating=False, **selgroups)
     def select_atoms(self, *args, **kwargs):
         """Select atoms.
