@@ -17,6 +17,7 @@ and https://github.com/MDAnalysis/mdanalysis/wiki/UnitTests
          tyler.je.reddy, utkbansal, vedantrathore, kash1102
 
   * 0.16
+    - Added two unit tests for MDAnalysis.coordinates.memory.MemoryReader
     - Make knownfailure work even without parentheses.
     - added two unit tests for MDAnalysis.analysis.polymer
     - added test for LeafletFinder handling a selection string
